--- a/index.html
+++ b/index.html
@@ -2,64 +2,66 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>👑 مملكة علوش | نظام الخطوط الخارقة</title>
+    <title>👑 مملكة علوش | الإصدار الأسطوري</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <style>
-        :root { --gold: #d4af37; --bg: #050505; }
-        body { margin: 0; font-family: 'Segoe UI', sans-serif; background: var(--bg); color: white; height: 100vh; display: flex; flex-direction: column; overflow: hidden; }
+        :root { --gold: #d4af37; --bg-overlay: rgba(0, 0, 0, 0.7); }
+        
+        body { 
+            margin: 0; 
+            font-family: 'Segoe UI', sans-serif; 
+            /* الخلفية الملكية */
+            background: url('https://images.unsplash.com/photo-1506157786151-b8491531f063?auto=format&fit=crop&w=1920&q=80') no-repeat center center fixed; 
+            background-size: cover;
+            color: white; 
+            height: 100vh; 
+            display: flex; 
+            flex-direction: column; 
+            overflow: hidden; 
+        }
 
-        header { background: #111; padding: 10px 15px; display: flex; justify-content: space-between; align-items: center; border-bottom: 2px solid var(--gold); z-index: 1000; }
+        /* طبقة حماية فوق الخلفية لراحة العين */
+        #overlay {
+            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+            background: rgba(0, 0, 0, 0.6); z-index: -1;
+        }
+
+        header { background: rgba(17, 17, 17, 0.9); padding: 10px 15px; display: flex; justify-content: space-between; align-items: center; border-bottom: 2px solid var(--gold); z-index: 1000; }
         .nav-btn { background: #222; border: 1px solid var(--gold); color: var(--gold); padding: 6px 12px; border-radius: 5px; cursor: pointer; font-size: 13px; font-weight: bold; }
 
         #wrapper { display: flex; flex: 1; position: relative; overflow: hidden; }
-        .sidebar { position: absolute; top: 0; width: 250px; height: 100%; background: #111; transition: 0.4s ease; z-index: 500; border: 1px solid #333; }
+        .sidebar { position: absolute; top: 0; width: 250px; height: 100%; background: rgba(15, 15, 15, 0.95); transition: 0.4s ease; z-index: 500; border: 1px solid #333; }
         #admin-panel { right: -260px; border-left: 2px solid red; }
         #color-panel { right: -260px; border-left: 2px solid var(--gold); }
         #users-panel { left: -260px; border-right: 2px solid var(--gold); }
         .open-right { right: 0 !important; }
         .open-left { left: 0 !important; }
 
-        #messages { flex: 1; overflow-y: auto; padding: 20px; background: #000; }
-        .line { border-bottom: 1px solid #1a1a1a; padding: 8px 0; font-size: 15px; }
+        /* منطقة الرسائل شفافة جزئياً لتبين الخلفية */
+        #messages { flex: 1; overflow-y: auto; padding: 20px; background: rgba(0, 0, 0, 0.4); }
+        .line { border-bottom: 1px solid rgba(255,255,255,0.05); padding: 8px 0; font-size: 15px; }
 
-        /* --- تأثيرات الخطوط المتحركة الأسطورية --- */
-        
-        /* 1. تأثير قوس قزح */
+        /* --- تأثيرات الخطوط --- */
         .rainbow { animation: rainbow-anim 2s infinite linear; font-weight: bold; }
         @keyframes rainbow-anim { 0% {color: red;} 33% {color: lime;} 66% {color: blue;} 100% {color: red;} }
-
-        /* 2. تأثير النار */
-        .fire { 
-            color: #ff4500; font-weight: bold;
-            text-shadow: 0 -2px 4px #fff, 0 -4px 10px #ff0, 0 -10px 20px #ff8000, 0 -18px 40px #f00;
-            animation: fire-anim 1s infinite alternate;
-        }
-        @keyframes fire-anim { from { text-shadow: 0 -2px 4px #fff, 0 -4px 10px #ff0, 0 -10px 20px #ff8000, 0 -18px 40px #f00; } 
-                               to { text-shadow: 0 -2px 4px #fff, 0 -4px 15px #ff0, 0 -12px 25px #ff8000, 0 -20px 50px #f00; } }
-
-        /* 3. تأثير الذهب السائل */
-        .gold-flow {
-            background: linear-gradient(to right, #bf953f, #fcf6ba, #b38728, #fbf5b7, #aa771c);
-            -webkit-background-clip: text; -webkit-text-fill-color: transparent;
-            background-size: 200% auto; animation: gold-anim 2s linear infinite; font-weight: bold;
-        }
+        .fire { color: #ff4500; font-weight: bold; text-shadow: 0 -2px 4px #fff, 0 -4px 10px #ff0, 0 -10px 20px #ff8000; animation: fire-anim 1s infinite alternate; }
+        @keyframes fire-anim { from { text-shadow: 0 -2px 4px #fff, 0 -4px 10px #ff0; } to { text-shadow: 0 -2px 4px #fff, 0 -4px 15px #ff0, 0 -12px 25px #ff8000; } }
+        .gold-flow { background: linear-gradient(to right, #bf953f, #fcf6ba, #b38728, #fbf5b7); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-size: 200% auto; animation: gold-anim 2s linear infinite; font-weight: bold; }
         @keyframes gold-anim { to { background-position: 200% center; } }
 
-        /* 4. تأثير النيون المشع */
-        .neon { color: #fff; font-weight: bold; animation: neon-anim 1.5s ease-in-out infinite alternate; }
-        @keyframes neon-anim { from { text-shadow: 0 0 5px #0ff, 0 0 10px #0ff, 0 0 20px #0ff; } to { text-shadow: 0 0 10px #0ff, 0 0 20px #0ff, 0 0 40px #0ff; } }
-
-        footer { padding: 15px; background: #111; border-top: 1px solid var(--gold); display: flex; gap: 10px; }
+        footer { padding: 15px; background: rgba(17, 17, 17, 0.95); border-top: 1px solid var(--gold); display: flex; gap: 10px; }
         input { flex: 1; padding: 12px; border-radius: 20px; border: 1px solid #444; background: #000; color: #fff; outline: none; }
     </style>
 </head>
 <body>
 
+    <div id="overlay"></div>
+
     <header>
         <button class="nav-btn" onclick="toggleSide('admin-panel')">⚙️ الإدارة</button>
         <button class="nav-btn" onclick="toggleSide('color-panel')" style="color: cyan; border-color: cyan;">🔥 تأثيرات الخط</button>
-        <div style="font-weight: bold; color: var(--gold);">👑 مـمـلـكـة عـلـوش</div>
+        <div style="font-weight: bold; color: var(--gold); text-shadow: 2px 2px 4px #000;">👑 مـمـلـكـة عـلـوش</div>
         <button class="nav-btn" onclick="toggleSide('users-panel', 'left')">👥 المتصلون</button>
     </header>
 
@@ -71,17 +73,13 @@
         <div id="color-panel" class="sidebar">
             <div style="padding:20px;">
                 <h3 style="color:var(--gold);">🎨 تأثيرات ملكية</h3>
-                <label>اختر التأثير المتحرك:</label><br><br>
                 <select id="f-anim" onchange="updateS()" style="width:100%; padding:10px; background:#222; color:#fff; border:1px solid gold;">
                     <option value="">خط عادي</option>
                     <option value="rainbow">🌈 قوس قزح</option>
                     <option value="fire">🔥 خط النار</option>
                     <option value="gold-flow">💰 ذهب متحرك</option>
-                    <option value="neon">💎 نيون مشع</option>
                 </select>
-                <br><br>
-                <label>أو اختر لون ثابت:</label>
-                <input type="color" id="f-color" value="#ffffff" onchange="updateS()" style="width:100%; height:40px; margin-top:5px;">
+                <input type="color" id="f-color" value="#ffffff" onchange="updateS()" style="width:100%; height:40px; margin-top:10px;">
             </div>
         </div>
 
@@ -127,7 +125,7 @@
             const div = document.createElement('div');
             div.className = 'line';
             const s = d.s || {c: '#fff', a: ''};
-            div.innerHTML = `<b style="color:var(--gold)">${d.u}:</b> <span class="${s.a}" style="color:${s.c}">${d.t}</span> <small style="float:left; color:#333;">${d.time}</small>`;
+            div.innerHTML = `<b style="color:var(--gold)">${d.u}:</b> <span class="${s.a}" style="color:${s.c}">${d.t}</span> <small style="float:left; color:rgba(255,255,255,0.2);">${d.time}</small>`;
             box.appendChild(div); box.scrollTop = box.scrollHeight;
         });
 
