--- a/index.html
+++ b/index.html
@@ -2,134 +2,105 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>👑 مملكة علوش | الإصدار الأسطوري</title>
+    <title>👑 مملكة علوش | النظام الشامل</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <style>
         :root { --gold: #d4af37; --bg-overlay: rgba(0, 0, 0, 0.7); }
-        
-        body { 
-            margin: 0; 
-            font-family: 'Segoe UI', sans-serif; 
-            /* الخلفية الملكية */
-            background: url('https://images.unsplash.com/photo-1506157786151-b8491531f063?auto=format&fit=crop&w=1920&q=80') no-repeat center center fixed; 
-            background-size: cover;
-            color: white; 
-            height: 100vh; 
-            display: flex; 
-            flex-direction: column; 
-            overflow: hidden; 
-        }
+        body { margin: 0; font-family: 'Segoe UI', sans-serif; background: url('https://images.unsplash.com/photo-1506157786151-b8491531f063?auto=format&fit=crop&w=1920&q=80') no-repeat center center fixed; background-size: cover; color: white; height: 100vh; display: flex; flex-direction: column; overflow: hidden; }
+        #overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.6); z-index: -1; }
 
-        /* طبقة حماية فوق الخلفية لراحة العين */
-        #overlay {
-            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            background: rgba(0, 0, 0, 0.6); z-index: -1;
-        }
+        header { background: rgba(17, 17, 17, 0.95); padding: 10px 15px; display: flex; justify-content: space-between; align-items: center; border-bottom: 2px solid var(--gold); z-index: 1000; }
+        #news-bar { background: rgba(212, 175, 55, 0.15); color: var(--gold); font-size: 13px; padding: 3px 0; border-bottom: 1px solid rgba(212, 175, 55, 0.3); text-align: center; }
 
-        header { background: rgba(17, 17, 17, 0.9); padding: 10px 15px; display: flex; justify-content: space-between; align-items: center; border-bottom: 2px solid var(--gold); z-index: 1000; }
         .nav-btn { background: #222; border: 1px solid var(--gold); color: var(--gold); padding: 6px 12px; border-radius: 5px; cursor: pointer; font-size: 13px; font-weight: bold; }
-
         #wrapper { display: flex; flex: 1; position: relative; overflow: hidden; }
-        .sidebar { position: absolute; top: 0; width: 250px; height: 100%; background: rgba(15, 15, 15, 0.95); transition: 0.4s ease; z-index: 500; border: 1px solid #333; }
-        #admin-panel { right: -260px; border-left: 2px solid red; }
-        #color-panel { right: -260px; border-left: 2px solid var(--gold); }
-        #users-panel { left: -260px; border-right: 2px solid var(--gold); }
-        .open-right { right: 0 !important; }
-        .open-left { left: 0 !important; }
+        .sidebar { position: absolute; top: 0; width: 250px; height: 100%; background: rgba(15, 15, 15, 0.98); transition: 0.4s ease; z-index: 500; border: 1px solid #333; }
+        .open-right { right: 0 !important; } .open-left { left: 0 !important; }
+        #admin-panel { right: -260px; border-left: 2px solid red; } #color-panel { right: -260px; border-left: 2px solid var(--gold); } #users-panel { left: -260px; border-right: 2px solid var(--gold); }
 
-        /* منطقة الرسائل شفافة جزئياً لتبين الخلفية */
         #messages { flex: 1; overflow-y: auto; padding: 20px; background: rgba(0, 0, 0, 0.4); }
-        .line { border-bottom: 1px solid rgba(255,255,255,0.05); padding: 8px 0; font-size: 15px; }
+        .line { border-bottom: 1px solid rgba(255,255,255,0.05); padding: 10px 0; font-size: 15px; }
+        .chat-img { max-width: 250px; border-radius: 10px; border: 2px solid var(--gold); margin-top: 5px; display: block; }
 
-        /* --- تأثيرات الخطوط --- */
+        /* تأثيرات الخطوط */
         .rainbow { animation: rainbow-anim 2s infinite linear; font-weight: bold; }
-        @keyframes rainbow-anim { 0% {color: red;} 33% {color: lime;} 66% {color: blue;} 100% {color: red;} }
         .fire { color: #ff4500; font-weight: bold; text-shadow: 0 -2px 4px #fff, 0 -4px 10px #ff0, 0 -10px 20px #ff8000; animation: fire-anim 1s infinite alternate; }
-        @keyframes fire-anim { from { text-shadow: 0 -2px 4px #fff, 0 -4px 10px #ff0; } to { text-shadow: 0 -2px 4px #fff, 0 -4px 15px #ff0, 0 -12px 25px #ff8000; } }
         .gold-flow { background: linear-gradient(to right, #bf953f, #fcf6ba, #b38728, #fbf5b7); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-size: 200% auto; animation: gold-anim 2s linear infinite; font-weight: bold; }
+        @keyframes fire-anim { from { text-shadow: 0 -2px 4px #fff, 0 -4px 10px #ff0; } to { text-shadow: 0 -2px 4px #fff, 0 -12px 25px #ff8000; } }
         @keyframes gold-anim { to { background-position: 200% center; } }
+        @keyframes rainbow-anim { 0% {color: red;} 33% {color: lime;} 66% {color: blue;} 100% {color: red;} }
 
-        footer { padding: 15px; background: rgba(17, 17, 17, 0.95); border-top: 1px solid var(--gold); display: flex; gap: 10px; }
-        input { flex: 1; padding: 12px; border-radius: 20px; border: 1px solid #444; background: #000; color: #fff; outline: none; }
+        footer { padding: 15px; background: rgba(17, 17, 17, 0.95); border-top: 1px solid var(--gold); display: flex; gap: 10px; align-items: center; }
+        input[type="text"] { flex: 1; padding: 12px; border-radius: 20px; border: 1px solid #444; background: #000; color: #fff; outline: none; }
+        .icon-btn { background: none; border: none; font-size: 24px; cursor: pointer; color: var(--gold); padding: 0 5px; }
     </style>
 </head>
 <body>
-
     <div id="overlay"></div>
-
     <header>
         <button class="nav-btn" onclick="toggleSide('admin-panel')">⚙️ الإدارة</button>
-        <button class="nav-btn" onclick="toggleSide('color-panel')" style="color: cyan; border-color: cyan;">🔥 تأثيرات الخط</button>
+        <button class="nav-btn" onclick="toggleSide('color-panel')" style="color: cyan; border-color: cyan;">🔥 التأثيرات</button>
         <div style="font-weight: bold; color: var(--gold); text-shadow: 2px 2px 4px #000;">👑 مـمـلـكـة عـلـوش</div>
         <button class="nav-btn" onclick="toggleSide('users-panel', 'left')">👥 المتصلون</button>
     </header>
+    <div id="news-bar"><marquee id="news-text">أهلاً بكم في شات مملكة علوش الرسمي.. نورتونا يا ملوك</marquee></div>
 
     <div id="wrapper">
-        <div id="admin-panel" class="sidebar">
-            <div style="padding:20px;"><h3>⚙️ الإدارة</h3><button class="nav-btn" onclick="clearDB()">🧹 مسح الشات</button></div>
-        </div>
-
-        <div id="color-panel" class="sidebar">
-            <div style="padding:20px;">
-                <h3 style="color:var(--gold);">🎨 تأثيرات ملكية</h3>
-                <select id="f-anim" onchange="updateS()" style="width:100%; padding:10px; background:#222; color:#fff; border:1px solid gold;">
-                    <option value="">خط عادي</option>
-                    <option value="rainbow">🌈 قوس قزح</option>
-                    <option value="fire">🔥 خط النار</option>
-                    <option value="gold-flow">💰 ذهب متحرك</option>
-                </select>
-                <input type="color" id="f-color" value="#ffffff" onchange="updateS()" style="width:100%; height:40px; margin-top:10px;">
-            </div>
-        </div>
-
-        <div id="chat-window"><div id="messages"></div></div>
-
-        <div id="users-panel" class="sidebar">
-            <div style="padding:20px;"><h3>👥 المتصلون</h3><div style="color:#00ff00;">● الملك علوش</div></div>
-        </div>
+        <div id="admin-panel" class="sidebar"><div style="padding:20px;"><h3>⚙️ الإدارة</h3><button class="nav-btn" onclick="clearDB()">🧹 مسح الشات</button><br><br><button class="nav-btn" onclick="updateNews()">📢 تغيير الإعلان</button></div></div>
+        <div id="color-panel" class="sidebar"><div style="padding:20px;"><h3>🎨 صبغ الخط</h3><select id="f-anim" onchange="updateS()" style="width:100%; padding:10px; background:#222; color:#fff;"><option value="">عادي</option><option value="rainbow">🌈 قوس قزح</option><option value="fire">🔥 خط النار</option><option value="gold-flow">💰 ذهب</option></select><input type="color" id="f-color" value="#ffffff" onchange="updateS()" style="width:100%; height:40px; margin-top:10px;"></div></div>
+        <div id="chat-window" style="flex:1; display:flex; flex-direction:column;"><div id="messages"></div></div>
+        <div id="users-panel" class="sidebar"><div style="padding:20px;"><h3>👥 المتصلون</h3><div style="color:#00ff00;">● الملك علوش</div></div></div>
     </div>
 
     <footer>
-        <input type="text" id="msg-in" placeholder="أصدر أوامرك...">
-        <button class="nav-btn" onclick="send()" style="padding:0 30px;">إرسال</button>
+        <button class="icon-btn" onclick="document.getElementById('img-upload').click()">🖼️</button>
+        <input type="file" id="img-upload" hidden accept="image/*" onchange="uploadImg(this)">
+        <input type="text" id="msg-in" placeholder="أصدر مرسومك...">
+        <button class="nav-btn" onclick="send()" style="padding:10px 25px;">إرسال</button>
     </footer>
 
     <script>
         const firebaseConfig = { databaseURL: "https://alloush-kingdom-default-rtdb.firebaseio.com" };
-        firebase.initializeApp(firebaseConfig);
-        const db = firebase.database();
-
+        firebase.initializeApp(firebaseConfig); const db = firebase.database();
         let myS = { c: '#ffffff', a: '' };
-        function updateS() { 
-            myS.c = document.getElementById('f-color').value; 
-            myS.a = document.getElementById('f-anim').value; 
-        }
-
-        function toggleSide(id, side = 'right') {
-            const el = document.getElementById(id);
-            el.classList.toggle(side === 'right' ? 'open-right' : 'open-left');
-        }
-
+        function updateS() { myS.c = document.getElementById('f-color').value; myS.a = document.getElementById('f-anim').value; }
+        function toggleSide(id, side='right') { document.getElementById(id).classList.toggle(side==='right'?'open-right':'open-left'); }
+        
         function send() {
             const inp = document.getElementById('msg-in');
             if(inp.value.trim()) {
-                db.ref("messages").push().set({ u: "علوش", t: inp.value, s: {c: myS.c, a: myS.a}, time: new Date().toLocaleTimeString([], {hour:'2-digit', minute:'2-digit'}) });
+                db.ref("messages").push().set({ u: "علوش", t: inp.value, s: myS, type: 'text', time: new Date().toLocaleTimeString([], {hour:'2-digit', minute:'2-digit'}) });
                 inp.value = "";
             }
         }
 
+        function uploadImg(input) {
+            const file = input.files[0];
+            if(file) {
+                const reader = new FileReader();
+                reader.onload = function(e) {
+                    db.ref("messages").push().set({ u: "علوش", img: e.target.result, type: 'image', time: new Date().toLocaleTimeString([], {hour:'2-digit', minute:'2-digit'}) });
+                };
+                reader.readAsDataURL(file);
+            }
+        }
+
         db.ref("messages").limitToLast(50).on("child_added", (snap) => {
-            const d = snap.val();
-            const box = document.getElementById('messages');
-            const div = document.createElement('div');
-            div.className = 'line';
-            const s = d.s || {c: '#fff', a: ''};
-            div.innerHTML = `<b style="color:var(--gold)">${d.u}:</b> <span class="${s.a}" style="color:${s.c}">${d.t}</span> <small style="float:left; color:rgba(255,255,255,0.2);">${d.time}</small>`;
+            const d = snap.val(); const box = document.getElementById('messages');
+            const div = document.createElement('div'); div.className = 'line';
+            if(d.type === 'image') {
+                div.innerHTML = `<b style="color:var(--gold)">${d.u}:</b><br><img src="${d.img}" class="chat-img"><small style="color:#555">${d.time}</small>`;
+            } else {
+                const s = d.s || {c:'#fff', a:''};
+                div.innerHTML = `<b style="color:var(--gold)">${d.u}:</b> <span class="${s.a}" style="color:${s.c}">${d.t}</span> <small style="float:left; color:rgba(255,255,255,0.2)">${d.time}</small>`;
+            }
             box.appendChild(div); box.scrollTop = box.scrollHeight;
         });
 
-        function clearDB() { if(confirm("مسح؟")) db.ref("messages").remove(); location.reload(); }
+        function clearDB() { if(confirm("مسح الشات؟")) db.ref("messages").remove(); location.reload(); }
+        function updateNews() { let n = prompt("الإعلان الجديد:"); if(n) { db.ref("news").set(n); } }
+        db.ref("news").on("value", (s) => { if(s.val()) document.getElementById('news-text').innerText = s.val(); });
         document.getElementById('msg-in').onkeypress = (e) => { if(e.key==='Enter') send(); };
     </script>
 </body>
