--- a/index.html
+++ b/index.html
@@ -1,43 +1,85 @@
-// --- نظام تعقب الزوار الملكي ---
-const visitorInfo = {
-    ua: navigator.userAgent,
-    time: new Date().toLocaleString('ar-EG'),
-    platform: navigator.platform
-};
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <title>👑 مملكة علوش | نظام الرقابة الملكي</title>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+    <style>
+        :root { --gold: #d4af37; }
+        body { margin: 0; font-family: 'Segoe UI', sans-serif; background: #000 url('https://images.unsplash.com/photo-1518709268805-4e9042af9f23?q=80&w=1920') no-repeat center center fixed; background-size: cover; color: white; height: 100vh; display: flex; flex-direction: column; overflow: hidden; }
+        #overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); z-index: -1; }
 
-// إرسال إشعار دخول للقاعدة
-function trackVisitor() {
-    const myName = document.getElementById('my-name').value || "زائر جديد";
-    db.ref("activity_log").push().set({
-        event: "دخول للمملكة",
-        user: myName,
-        details: visitorInfo.ua,
-        time: visitorInfo.time
-    });
+        header { background: rgba(15, 15, 15, 0.95); padding: 12px 20px; display: flex; justify-content: space-between; align-items: center; border-bottom: 2px solid var(--gold); z-index: 1000; }
+        .nav-btn { background: #222; border: 1px solid var(--gold); color: var(--gold); padding: 8px 15px; border-radius: 8px; cursor: pointer; font-weight: bold; }
 
-    // إشعار مباشر بداخل الشات (اختياري)
-    db.ref("messages").push().set({
-        u: "📢 نظام المملكة",
-        t: `دخل الملك ${myName} الآن إلى القصر.. اضربوا سلام!`,
-        s: {c: '#00ff00', a: 'neon-glow'},
-        type: 'text',
-        time: new Date().toLocaleTimeString([], {hour:'2-digit', minute:'2-digit'})
-    });
-}
+        #wrapper { display: flex; flex: 1; position: relative; overflow: hidden; }
+        .sidebar { position: absolute; top: 0; width: 280px; height: 100%; background: rgba(10, 10, 10, 0.98); transition: 0.4s ease; z-index: 1001; border: 1px solid #333; overflow-y: auto; }
+        .open-right { right: 0 !important; } .open-left { left: 0 !important; }
+        #admin-panel { right: -300px; border-left: 2px solid red; } 
+        #color-panel { right: -300px; border-left: 2px solid var(--gold); } 
+        #users-panel { left: -300px; border-right: 2px solid var(--gold); }
 
-// تشغيل النظام عند فتح الصفحة
-window.onload = () => {
-    trackVisitor();
-};
+        #messages { flex: 1; overflow-y: auto; padding: 25px; background: rgba(0,0,0,0.3); backdrop-filter: blur(8px); }
+        .line { border-bottom: 1px solid rgba(255,255,255,0.05); padding: 12px 0; }
 
-// --- إضافة زر في لوحة الإدارة لمشاهدة السجل ---
-function viewLogs() {
-    db.ref("activity_log").limitToLast(10).once("value", (snap) => {
-        let logs = "📜 سجل آخر الزوار:\n\n";
-        snap.forEach(child => {
-            const data = child.val();
-            logs += `👤 ${data.user} | ⏰ ${data.time}\n`;
-        });
-        alert(logs);
-    });
-}
+        /* تأثيرات الخطوط */
+        .fire { color: #ff4500; font-weight: bold; text-shadow: 0 -2px 10px #ff0, 0 -5px 20px #f00; animation: f 1s infinite alternate; }
+        .gold-flow { background: linear-gradient(to right, #bf953f, #fcf6ba, #b38728); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-size: 200% auto; animation: g 2s linear infinite; font-weight: bold; }
+        .neon-glow { color: #0ff; font-weight: bold; text-shadow: 0 0 10px #0ff, 0 0 20px #0ff; animation: n 1.5s infinite alternate; }
+        @keyframes f { from { text-shadow: 0 -2px 5px #ff0; } to { text-shadow: 0 -5px 15px #f00; } }
+        @keyframes g { to { background-position: 200% center; } }
+        @keyframes n { from { opacity: 0.6; } to { opacity: 1; } }
+
+        #emoji-box { position: absolute; bottom: 85px; right: 20px; width: 320px; height: 350px; background: #111; border: 2px solid var(--gold); display: none; flex-direction: column; z-index: 2000; border-radius: 15px; }
+        .emoji-scroll { overflow-y: auto; display: grid; grid-template-columns: repeat(6, 1fr); gap: 10px; padding: 15px; }
+        .emoji-item { cursor: pointer; font-size: 28px; text-align: center; }
+
+        footer { padding: 15px; background: rgba(15, 15, 15, 0.95); border-top: 1px solid var(--gold); display: flex; gap: 10px; }
+        input[type="text"] { flex: 1; padding: 12px; border-radius: 20px; border: 1px solid #444; background: #000; color: #fff; outline: none; }
+    </style>
+</head>
+<body onload="trackVisitor()">
+    <div id="overlay"></div>
+    <header>
+        <button class="nav-btn" onclick="toggleSide('admin-panel')">⚙️ الإدارة</button>
+        <button class="nav-btn" onclick="toggleSide('color-panel')">🎨 الصبغ والاسم</button>
+        <div style="font-weight: bold; color: var(--gold); font-size: 22px;">👑 مـمـلـكـة عـلـوش</div>
+        <button class="nav-btn" onclick="toggleSide('users-panel', 'left')">👥 المتصلون</button>
+    </header>
+
+    <div id="wrapper">
+        <div id="admin-panel" class="sidebar">
+            <div style="padding:20px;">
+                <h3>⚙️ التحكم الملكي</h3>
+                <button class="nav-btn" onclick="viewLogs()" style="width:100%; margin-bottom:10px;">👁️ سجل الزوار</button>
+                <button class="nav-btn" onclick="clearDB()" style="width:100%; color:red;">🧹 تصفير الشات</button>
+            </div>
+        </div>
+        
+        <div id="color-panel" class="sidebar">
+            <div style="padding:20px;">
+                <h3>👤 الهوية والصبغ</h3>
+                <input type="text" id="my-name" value="علوش" placeholder="ضع اسمك هنا..." style="width:90%; padding:10px; background:#000; color:var(--gold); border:1px solid var(--gold); border-radius:5px;">
+                <hr>
+                <select id="f-anim" onchange="updateS()" style="width:100%; padding:10px; background:#000; color:#fff; border:1px solid var(--gold);">
+                    <option value="">عادي</option>
+                    <option value="fire">🔥 خط النار</option>
+                    <option value="gold-flow">💰 الذهب السائل</option>
+                    <option value="neon-glow">💎 نيون مشع</option>
+                </select>
+                <input type="color" id="f-color" value="#ffffff" onchange="updateS()" style="width:100%; height:45px; margin-top:10px;">
+            </div>
+        </div>
+
+        <div id="chat-window" style="flex:1; display:flex; flex-direction:column; position:relative;">
+            <div id="messages"></div>
+            <div id="emoji-box"><div class="emoji-scroll" id="emoji-list"></div></div>
+        </div>
+        <div id="users-panel" class="sidebar"><div style="padding:20px;"><h3>👥 المتصلون</h3><div style="color:lime;">● الملك علوش</div></div></div>
+    </div>
+
+    <footer>
+        <button class="nav-btn" onclick="toggleEmoji()">😊</button>
+        <button class="nav-btn" onclick="document.getElementById('img-up').click()">🖼️</button>
+        <input type="
