--- a/index.html
+++ b/index.html
@@ -1,24 +1,20 @@
-/* تأثير وميض البرق الأبيض */
-#flash-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: white;
-    opacity: 0;
-    z-index: 10000;
-    pointer-events: none;
+/* تأثير الاسم المشع بألوان قوس قزح */
+.royal-name {
+    font-weight: bold;
+    font-size: 1.1em;
+    background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-size: 400% 400%;
+    animation: rainbow-flow 3s linear infinite, glow-text 1.5s ease-in-out infinite alternate;
 }
 
-@keyframes flash-anim {
-    0% { opacity: 0; }
-    10% { opacity: 0.8; }
-    20% { opacity: 0; }
-    30% { opacity: 0.8; }
-    100% { opacity: 0; }
+@keyframes rainbow-flow {
+    0% { background-position: 0% 50%; }
+    100% { background-position: 100% 50%; }
 }
 
-.flash-active {
-    animation: flash-anim 0.4s ease-out;
+@keyframes glow-text {
+    from { text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px var(--gold); }
+    to { text-shadow: 0 0 10px #fff, 0 0 20px var(--gold), 0 0 30px var(--gold); }
 }
