--- a/index.html
+++ b/index.html
@@ -1,38 +1,18 @@
-/* خلفية النجوم المتحركة */
-#star-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -2;
-    overflow: hidden;
-    background: radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%);
-}
-
-.star {
-    position: absolute;
-    background: white;
-    border-radius: 50%;
-    opacity: 0.5;
-    animation: twinkle var(--duration) infinite;
-}
-
-@keyframes twinkle {
-    0%, 100% { opacity: 0.3; transform: scale(1); }
-    50% { opacity: 1; transform: scale(1.2); }
-}
-
-/* تأثير الشهب الساقطة */
-.shooting-star {
-    position: absolute;
-    width: 2px;
-    height: 2px;
-    background: linear-gradient(to right, white, transparent);
-    animation: shoot 3s linear infinite;
-}
-
-@keyframes shoot {
-    0% { transform: translateX(0) translateY(0) rotate(-45deg); opacity: 1; }
     100% { transform: translateX(1000px) translateY(1000px) rotate(-45deg); opacity: 0; }
 }
+function createStars() {
+    const container = document.getElementById('star-container');
+    for (let i = 0; i < 150; i++) {
+        const star = document.createElement('div');
+        star.className = 'star';
+        const size = Math.random() * 3 + 'px';
+        star.style.width = size;
+        star.style.height = size;
+        star.style.left = Math.random() * 100 + 'vw';
+        star.style.top = Math.random() * 100 + 'vh';
+        star.style.setProperty('--duration', Math.random() * 3 + 2 + 's');
+        container.appendChild(star);
+    }
+}
+// استدعاء الدالة عند تشغيل المملكة
+window.addEventListener('load', createStars);
